--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,447 @@
-body {
+html {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
+  width: 100vw;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  overflow: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body,
+#root {
+  padding: 0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+}
+
+body {
+  background-color: #ebf2f7;
+  position: relative;
+}
+
+#home-screen {
+  height: 100%;
+  width: 100%;
+}
+
+/* ##################### */
+/* ###### SIDEBAR ###### */
+/* ##################### */
+
+#sidebar {
+  height: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-start;
+  width: 25%;
+  position: absolute;
+  left: 0;
+  background-color: #ebf2f7;
+  box-shadow: 1px 0px 20px 0px #c9cfd3;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  transition: all 1s ease 0s;
+  z-index: 100;
+}
+
+#sidebar-menu {
+  max-width: 25vw;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+
+.sidebar-card {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  background-color: #ffffff;
+  width: 70%;
+  margin: 0 auto;
+  box-shadow: 1px 0px 20px 0px #c9cfd3;
+  border-radius: 8px;
+}
+
+#hi-card {
+  flex-flow: row;
+  margin-top: 17%;
+  height: 10%;
+}
+
+#view-toggler {
+  justify-content: space-evenly;
+  margin-top: 1.5rem;
+  height: 20%;
+}
+
+#toggle-icon {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row nowrap;
+  height: 50%;
+  width: 80%;
+}
+
+#toggle-icon div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #dce4eb;
+  width: 100%;
+  height: 90%;
+  cursor: pointer;
+  box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.15) inset;
+}
+
+#toggle-icon div:hover {
+  background: #c8d0d6c9;
+}
+
+#block-view-icon {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+#list-view-icon {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
+.active-view {
+  background: #98efc9 !important;
+  transition: all 0.25s ease 0s;
+}
+
+#toggle-icon div img {
+  height: auto;
+  max-height: 70%;
+  width: 35%;
+}
+
+.active-view img {
+  width: 40% !important;
+}
+
+#feedback-toggler {
+  justify-content: space-evenly;
+  margin-top: 1.5rem;
+  height: 20%;
+}
+
+#feedback-button {
+  background: #98efc9;
+  border-radius: 10px;
+  padding: 2vh 2.2vw;
+  cursor: pointer;
+  box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15) inset;
+}
+
+#feedback-button:hover {
+  background: #40eba1e3;
+}
+
+#sidebar.feedback-active {
+  width: 65% !important;
+}
+
+#feedback-form {
+  display: flex;
+  position: absolute;
+  height: 100%;
+  width: 45vw;
+  top: 8vh;
+  left: 25vw;
+  flex-flow: column nowrap;
+  align-items: flex-start;
+  margin: 0 auto;
+  transition: all 1s ease 0s;
+  visibility: visible;
+  opacity: 1;
+}
+
+#feedback-form.not-active {
+  visibility: hidden;
+  opacity: 0;
+}
+
+label {
+  display: block;
+  margin-left: 2%;
+  margin-bottom: 1%;
+  font-size: 0.9vw;
+}
+input {
+  display: block;
+  border: none;
+  box-shadow: 1px 0px 20px 0px rgba(0, 0, 0, 0.15);
+  width: 42%;
+  height: 5%;
+  border-radius: 5px;
+  margin-bottom: 2%;
+  padding: 0 3%;
+}
+
+.input {
+  width: 100%;
+  height: 5%;
+  margin-bottom: 3%;
+  padding: 0;
+  position: relative;
+}
+
+input[type='search'] {
+  display: inline;
+  height: 100%;
+  width: 60%;
+}
+
+#search-icon {
+  position: absolute;
+  top: 25%;
+  right: 45%;
+}
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
+}
+
+input:focus {
+  outline: none;
+}
+
+textarea {
+  display: block;
+  border: none;
+  box-shadow: 1px 0px 20px 0px rgba(0, 0, 0, 0.15);
+  width: 80%;
+  height: 10%;
+  resize: none;
+  border-radius: 5px;
+  margin-bottom: 3%;
+  padding: 3% 3%;
+}
+
+textarea:focus {
+  outline: none;
+}
+
+textarea::placeholder,
+input::placeholder {
+  font-size: 1.5vh;
+  color: #c1c1c1;
+}
+
+#country-code {
+  display: inline;
+  height: 100%;
+  width: 2em;
+}
+
+#phone-number {
+  display: inline;
+  margin-left: 0.5em;
+  width: 30%;
+  height: 100%;
+}
+
+#email {
+  display: inline;
+  width: 42%;
+  height: 100%;
+}
+
+button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 3% 0 0 0;
+  border: none;
+  background: #5cc8a1;
+  border-radius: 6px;
+  padding: 1.2vh 2.2vw;
+  cursor: pointer;
+  box-shadow: 0px 0px 20px 0px rgba(107, 107, 107, 0.055) inset;
+}
+
+/* ######################## */
+/* ###### NEWS PANEL ###### */
+/* ######################## */
+
+#news-panel {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  flex-flow: column nowrap;
+  align-items: flex-end;
+  transition: all 1s ease 0s;
+}
+
+#news-list {
+  margin-top: 3.1%;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-evenly;
+  flex-grow: 1;
+  width: 75%;
+}
+
+.news-card-list {
+  margin-left: 6%;
+  display: flex;
+  height: 100%;
+  flex-flow: row nowrap;
+  align-items: center;
+  background-color: #ffffff;
+  width: 85%;
+  box-shadow: 1px 0px 20px 0px #c9cfd3;
+  border-radius: 13px;
+  cursor: pointer;
+}
+
+.news-lines-list {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 100%;
+}
+
+#close-icon-list {
+  background-color: #ffffff;
+  height: 5vh;
+  width: 5vh;
+  margin-left: 1%;
+  border-radius: 100%;
+  align-self: center;
+  text-align: center;
+}
+
+#close-icon-list img {
+  height: 90%;
+  margin: 5%;
+}
+
+#news-block {
+  display: flex;
+  flex-flow: row wrap;
+  margin-top: 4.5%;
+  justify-content: space-evenly;
+  flex-grow: 1;
+  margin-right: 7.5%;
+  width: 60%;
+}
+
+.news-card-block {
+  display: flex;
+  height: 90%;
+  width: 90%;
+  flex-flow: column nowrap;
+  align-items: center;
+  background-color: #ffffff;
+  box-shadow: 1px 0px 20px 0px #c9cfd3;
+  border-radius: 7px;
+  cursor: pointer;
+}
+
+.news-lines-block {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
+}
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+  transition: all 1s ease 0s;
+}
+
+.visible {
+  visibility: visible;
+  opacity: 1;
+  transition: all 1s ease 0s;
+}
+
+#iframe-container {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: 101;
+  cursor: pointer;
+  background: rgba(0, 0, 0, 0.418);
+}
+
+iframe {
+  position: absolute;
+  left: 15%;
+  top: 15%;
+  z-index: 102;
+  border: 10px solid #434343;
+  border-radius: 20px;
+}
+
+#pagination {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  align-items: center;
+  height: 15%;
+  width: 75%;
+}
+
+.page-no-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 5vh;
+  width: 5vh;
+}
+
+.page-no {
+  background: #bababa;
+  height: 3vh;
+  width: 3vh;
+  border-radius: 100%;
+  cursor: pointer;
+  text-align: center;
+  font-size: 1.8vh;
+  font-weight: bold;
+  color: white;
+}
+
+.page-no p {
+  margin: 0.2vh 0vh;
+}
+
+.page-active div {
+  background: #ffffff;
+  height: 4vh;
+  width: 4vh;
+  color: black;
+  transition: all 0.25s ease 0s;
+  box-shadow: 1px 0px 20px 0px #c9cfd3;
+}
+
+.page-active p {
+  margin: 0.7vh 0;
+}
+
+#pagination img {
+  cursor: pointer;
+  height: 3vh;
+  width: 3vh;
+}
+
+#pagination img:hover {
+  height: 4vh;
+  width: 4vh;
 }
