--- a/src/index.css
+++ b/src/index.css
@@ -199,10 +199,21 @@ input[type='search'] {
   width: 60%;
 }
 
+[list]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+}
+
 #search-icon {
   position: absolute;
   top: 25%;
   right: 45%;
+}
+
+input[type='search']::-webkit-search-decoration,
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-results-button,
+input[type='search']::-webkit-search-results-decoration {
+  display: none;
 }
 
 input[type='number']::-webkit-inner-spin-button,
